--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
         color: white;
         margin-left: 0.7rem;
         
+        
     }
     .link-primary{
         background-color: var(--primary-color);
@@ -91,7 +92,7 @@ body{
 }
 
 .navigation .link{
-    color: white;
+    color: black;
 }
 /* ----------------------------------Header--------------------------------------------- */
 .hero{
